--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,37 @@ header {
 
 main {
   display: flex;
-  margin-top: 50px;
+  /* margin-top: 50px; */
+  flex-direction: column;
+  justify-content: flex-start;
   margin-left: 0;
   margin-right: 0;
   width: 95%;
-  height: 95%;
+  height: 750px;
   justify-content: center;
   align-items: center;
   border: 15px solid black
 
+}
+
+#gamescreen, #gamebg {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 600px;
+  min-height: 400px;
+  border: 5px solid black;
+  z-index: 3;
+}
+
+#gamebg {
+  object-fit: cover;
+}
+
+h1 {
+  text-align: center;
+  font-size: medium;
+  max-width: 600px;
+  object-fit: cover;
 }
